--- a/Client/SpeedwayTyperApp.Client.csproj
+++ b/Client/SpeedwayTyperApp.Client.csproj
@@ -8,6 +8,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Remove="Pages\ChangePassword.razor" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.19" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.18" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.18" PrivateAssets="all" />
@@ -21,6 +25,18 @@
 
 	<ItemGroup>
 		<ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <UpToDateCheckInput Remove="Pages\ChangePassword.razor" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="Pages\ChangePassword.razor" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="Pages\ChangePassword.razor" />
 	</ItemGroup>
 
 </Project>
