Add Docker setup, PostgreSQL migration, and documentation

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -10,7 +10,7 @@
     "Issuer": "SpeedwayTyperApp"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SpeedwayTyperDb;Trusted_Connection=True;"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=speedwaytyper;Username=speedway;Password=speedway"
   },
   "AllowedHosts": "*"
 }
