--- a/Server/SpeedwayTyperApp.Server.csproj
+++ b/Server/SpeedwayTyperApp.Server.csproj
@@ -8,18 +8,18 @@
 		<AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.19" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.18" />
-		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.19" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.19" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.19">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.19" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-	</ItemGroup>
+        <ItemGroup>
+                <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.19" />
+                <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.18" />
+                <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.19" />
+                <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.19" />
+                <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.19">
+                        <PrivateAssets>all</PrivateAssets>
+                        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+                </PackageReference>
+                <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+                <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+        </ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Client\SpeedwayTyperApp.Client.csproj" />
